--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                         <div class="navbar-nav mx-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="event.html" class="nav-item nav-link">Events</a>
-                            <div class="nav-item dropdown">
+                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programs</a>
                                 <div class="dropdown-menu m-0 bg-secondary shadow-lg p-3 mb-5 bg-white rounded rounded-0">
                                     <a href="blog.html" class="dropdown-item">Infant</a>
@@ -77,6 +76,7 @@
 									<a href="team.html" class="dropdown-item">OSC</a>
                                </div>
                             </div>
+				 <a href="event.html" class="nav-item nav-link">Gallary</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="d-flex me-4">
